Prevent modal overflow
Allowing the modal to extend; thus "natural" page scrolling allows to see the
whole popup.

--- a/budget/static/css/main.css
+++ b/budget/static/css/main.css
@@ -223,10 +223,6 @@ tr:hover .extra-info {
     display: inline;
 }
 
-.modal-body {
-    max-height:455px;
-}
-
 /* Fluid Offsets for Boostrap */
 
 .row-fluid > [class*="span"]:not([class*="offset"]):first-child{margin-left:0;}
